--- a/etc/server.cfg
+++ b/etc/server.cfg
@@ -35,9 +35,23 @@ tv_timeout 60                                 // CSTV connection timeout in seco
 tv_title "{{SERVER_HOSTNAME}} CSTV"           // Set title for CSTV spectator UI
 tv_transmitall 1                              // Transmit all entities (not only director view)
 
+// Bots
+
+//bot_difficulty {{BOT_DIFFICULTY}}           // the skill of bots: 0=easy, 1=normal, 2=hard, 3=expert.
+//bot_quota {{BOT_QUOTA}}                     // The total number of bots in a game
+//bot_quota_mode "{{BOT_QUOTA_MODE}}"         // The Type of bot_quota:"normal", "fill", "match"
+
 // Logs
 
 log {{SERVER_LOG}}                            // Turns logging 'on' or 'off', defaults to 'on'
 mp_logmoney {{SERVER_LOG_MONEY}}              // Turns money logging on/off: 0=off, 1=on
 mp_logdetail {{SERVER_LOG_DETAIL}}            // Combat damage logging: 0=disabled, 1=enemy, 2=friendly, 3=all
 mp_logdetail_items {{SERVER_LOG_ITEMS}}       // Turns item logging on/off: 0=off, 1=on
+mp_logloadouts {{SERVER_LOG_LOADOUTS}}        // Turns full loadout logging on/off 0=off, 1=on
+
+// Network Logging
+
+net_showevents 0                              // Logging of network events: 0=off, 1=on.
+net_showudp 0                                 // Logging of UDP network activity: 0=off, 1=on.
+sv_log_detail 0                               // Detail level for server logs: 0=minimal, higher=more verbose.
+
