--- a/etc/server.cfg
+++ b/etc/server.cfg
@@ -1,43 +1,58 @@
 // Server Defaults
 
-hostname "{{SERVER_HOSTNAME}}"                // Set server hostname
-sv_cheats {{SERVER_CHEATS}}                   // Enable or disable cheats
-sv_hibernate_when_empty {{SERVER_HIBERNATE}}  // Disable server hibernation
+hostname "Research"                           // Set server hostname
+sv_cheats 1                                   // Enable or disable cheats
+rcon_password "RCON"
 
-// Passwords
+// Bots
 
-rcon_password "{{SERVER_RCON_PW}}"            // Set rcon password
+bot_difficulty 2                              // Set bot difficulty level: 0=easy, 1=normal, 2=hard, 3=expert
+bot_chatter "normal"                          // Set bot communication style: "off", "radio", "minimal", "normal"
+bot_quota_mode "normal"                       // Determine how bots are filled: "normal", "fill", "match"
+bot_quota 10                                  // Number of bots to add to the server
+
 
 // CSTV
 
-sv_hibernate_postgame_delay 30                // Delay server hibernation after all clients disconnect
-
 tv_allow_camera_man 1                         // Auto director allows spectators to become camera man
 tv_allow_static_shots 1                       // Auto director uses fixed level cameras for shots
-tv_autorecord {{TV_AUTORECORD}}               // Automatically records all games as CSTV demos: 0=off, 1=on.
+tv_autorecord 0                               // Automatically records all games as CSTV demos: 0=off, 1=on.
 tv_chatgroupsize 0                            // Set the default chat group size
 tv_chattimelimit 8                            // Limits spectators to chat only every n seconds
 tv_debug 0                                    // CSTV debug info.
-tv_delay {{TV_DELAY}}                         // CSTV broadcast delay in seconds
+tv_delay 0                                    // CSTV broadcast delay in seconds
 tv_delaymapchange 1                           // Delays map change until broadcast is complete
 tv_deltacache 2                               // Enable delta entity bit stream cache
 tv_dispatchmode 1                             // Dispatch clients to relay proxies: 0=never, 1=if appropriate, 2=always
-tv_enable {{TV_ENABLE}}                       // Activates CSTV on server: 0=off, 1=on.
+tv_enable 0                                   // Activates CSTV on server: 0=off, 1=on.
 tv_maxclients 10                              // Maximum client number on CSTV server.
-tv_maxrate {{TV_MAXRATE}}                     // Max CSTV spectator bandwidth rate allowed, 0 == unlimited
-tv_name "{{SERVER_HOSTNAME}} CSTV"            // CSTV host name
+tv_maxrate 0                                  // Max CSTV spectator bandwidth rate allowed, 0 == unlimited
+tv_name "Research CSTV"                       // CSTV host name
 tv_overridemaster 0                           // Overrides the CSTV master root address.
-tv_port {{TV_PORT}}                           // Host SourceTV port
-tv_password "{{TV_PW}}"                       // CSTV password for clients
-tv_relaypassword "{{TV_RELAY_PW}}"            // CSTV password for relay proxies
+tv_port 27020                                 // Host SourceTV port
+tv_password "TVPW"                            // CSTV password for clients
+tv_relaypassword "TVRPW"                      // CSTV password for relay proxies
 tv_relayvoice 1                               // Relay voice data: 0=off, 1=on
 tv_timeout 60                                 // CSTV connection timeout in seconds.
-tv_title "{{SERVER_HOSTNAME}} CSTV"           // Set title for CSTV spectator UI
+tv_title "Research CSTV"                      // Set title for CSTV spectator UI
 tv_transmitall 1                              // Transmit all entities (not only director view)
 
 // Logs
 
-log {{SERVER_LOG}}                            // Turns logging 'on' or 'off', defaults to 'on'
-mp_logmoney {{SERVER_LOG_MONEY}}              // Turns money logging on/off: 0=off, 1=on
-mp_logdetail {{SERVER_LOG_DETAIL}}            // Combat damage logging: 0=disabled, 1=enemy, 2=friendly, 3=all
-mp_logdetail_items {{SERVER_LOG_ITEMS}}       // Turns item logging on/off: 0=off, 1=on
+log "on"                                      // Turns logging 'on' or 'off', defaults to 'on'
+mp_logmoney 0                                 // Turns money logging on/off: 0=off, 1=on
+mp_logdetail 0                                // Combat damage logging: 0=disabled, 1=enemy, 2=friendly, 3=all
+mp_logdetail_items 0                          // Turns item logging on/off: 0=off, 1=on
+
+// Networking
+
+sv_maxrate 0                                   // Max bandwidth rate allowed per client (0 = unlimited)
+sv_minrate 80000                               // Minimum bandwidth rate per client
+sv_mincmdrate 64                               // Minimum command update rate
+sv_maxcmdrate 128                              // Maximum command update rate
+sv_maxupdaterate 128                           // Max update rate for clients
+sv_minupdaterate 64                            // Minimum update rate for clients
+sv_lan 0                                       // 0 = internet server, 1 = LAN server
+sv_hibernate_when_empty 0                     // Disable server hibernation
+sv_hibernate_postgame_delay 60                // Delay server hibernation after all clients disconnect
+
