fixed issue where the autoexec.cfg didn't work

--- a/cs2_main_image/Dockerfile
+++ b/cs2_main_image/Dockerfile
@@ -2,11 +2,15 @@
 FROM base-cs2-image
 SHELL ["/bin/bash", "-c"]
 COPY ["setup.sh", "/home/steam/"]
+COPY ["autoexec.cfg", "/home/steam"]
+COPY ["server.cfg", "/home/steam"]
 USER root
 RUN apt update && \
 apt install -y unzip unar && \
 chown steam /home/steam/setup.sh && \
-chmod +x /home/steam/setup.sh  
+chmod +x /home/steam/setup.sh && \  
+chown steam /home/steam/autoexec.cfg && \
+chown steam /home/steam/server.cfg 
 
 USER steam
 RUN mkdir /home/steam/download && \
@@ -24,7 +28,7 @@ curl -L https://github.com/SUBERNER/cs2-simple-discord-report/releases/download/
 unzip ReportDcPlugin.zip -d addons/counterstrikesharp/plugins/ && \
 rm ReportDcPlugin.zip && \
 #Admin ESP plugin  
-curl -L https://github.com/kgarri/bg-koka-cs2-xray-esp/releases/download/latest/AdminESP.tar.gz --output ESP.tar.gz && \
+curl -L https://github.com/kgarri/bg-koka-cs2-xray-esp/releases/download/v1.0.2//AdminESP.tar.gz --output ESP.tar.gz && \
 tar -xzvf ESP.tar.gz -C addons/counterstrikesharp/plugins/ && \
 rm ESP.tar.gz
 
