--- a/cs2_main_image/autoexec.cfg
+++ b/cs2_main_image/autoexec.cfg
@@ -1,7 +1,11 @@
-tv_enable 1                 // Enables SourceTV
-tv_autorecord 1             // Automatically records on match start
-tv_allow_static_shots 1     // Auto director uses fixed level cameras for shots
-tv_autoretry 1              // Relay proxies retry connection after network timeout
-tv_delay 0                  // No delay for recording
-tv_transmitall 1            // Ensures SourceTV records all events
-tv_title "CS2 Server Demo"  // Name of the SourceTV instance
+tv_enable "1"                 // Enables SourceTV
+tv_autorecord "1"             // Automatically records on match start
+tv_allow_static_shots "1"     // Auto director uses fixed level cameras for shots
+tv_autoretry "1"              // Relay proxies retry connection after network timeout
+tv_delay "0"                  // No delay for recording
+tv_transmitall "0"            // Ensures SourceTV records all events
+tv_title "CS2 Research"       // Name of the SourceTV instance
+
+sv_cheats "1"
+mp_autokick "0"
+mp_warmup_pausetimer "1"
